--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,3 +93,87 @@ header {
         }
     }
 }
+
+footer {
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 200px;
+    .foot-head {
+        height: 112px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: #474747 solid 1px;
+        margin-bottom: 35px;
+        button {
+            background-color: #474747;
+            height: 48px;
+            padding: 0 2.3rem;
+            color: white;
+            font-size: 1.2rem;
+            font-weight: 500;
+            border-radius: 0.4rem;
+            border: none;
+        }
+    }
+    .foot-mid {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 30px;
+        border-bottom: #474747 solid 1px;
+        margin-bottom: 30px;
+        .box{
+            width: 232px;
+            display: flex;
+            flex-direction: column;
+            p {
+                color: white;
+                font-size: 14px;
+                font-weight: 600;
+            }
+            a {
+                font-size: 14px;
+                margin-top: 1.2rem;
+                color: gray;
+                transition: .3s ease;
+                text-decoration: none;
+                    &:hover {
+                    color: white;
+                    transition: .3s ease;
+                }
+            }
+        }
+    }
+    .download {
+        margin-top: 32px;
+        padding-bottom: 32px;
+        border-bottom: #474747 solid 1px;
+        .left-download {
+            p {
+                font-size: 14px;
+                font-weight: 600;
+                color: white;
+            }
+            .stores {
+                display: flex;
+                gap: 10px;
+                margin-top: 10px;
+                img {
+                    width: 130px;
+                    height: 42px;
+                    border-radius: 10px;
+                }
+            }
+        }
+    }
+
+    .foot-bot {
+        color:gray;
+        margin-top: 32px;
+        margin-bottom: 32px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+}
