--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,8 @@ header {
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
 
     .top-nav {
         display: flex;
@@ -35,10 +37,13 @@ header {
         width: 100%;
         padding: 10px 200px;
         background-color: #333333;
-        .left, .right {
+
+        .left,
+        .right {
             display: flex;
             align-items: center;
             gap: 14px;
+
             a {
                 display: flex;
                 align-items: center;
@@ -50,6 +55,7 @@ header {
             }
         }
     }
+
     .main-header {
         display: flex;
         justify-content: space-between;
@@ -62,24 +68,27 @@ header {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            gap: 5px;   
+            gap: 5px;
             border: 1px solid #33333333;
-            padding: 5px;            
+            padding: 5px;
             border-radius: 4px;
             width: 100%;
             max-width: 700px;
+
             input {
                 all: unset;
                 width: 100%;
                 height: 100%;
             }
         }
+
         nav {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width: 50%;            
+            width: 50%;
             gap: 20px;
+
             a {
                 display: flex;
                 flex-direction: column;
@@ -99,6 +108,9 @@ footer {
     display: flex;
     flex-direction: column;
     padding: 10px 200px;
+    max-width: 1920px;
+    margin: 0 auto;
+
     .foot-head {
         height: 112px;
         display: flex;
@@ -106,6 +118,7 @@ footer {
         justify-content: space-between;
         border-bottom: #474747 solid 1px;
         margin-bottom: 35px;
+
         button {
             background-color: #474747;
             height: 48px;
@@ -117,48 +130,57 @@ footer {
             border: none;
         }
     }
+
     .foot-mid {
         display: flex;
         justify-content: space-between;
         padding-bottom: 30px;
         border-bottom: #474747 solid 1px;
         margin-bottom: 30px;
-        .box{
+
+        .box {
             width: 232px;
             display: flex;
             flex-direction: column;
+
             p {
                 color: white;
                 font-size: 14px;
                 font-weight: 600;
             }
+
             a {
                 font-size: 14px;
                 margin-top: 1.2rem;
                 color: gray;
                 transition: .3s ease;
                 text-decoration: none;
-                    &:hover {
+
+                &:hover {
                     color: white;
                     transition: .3s ease;
                 }
             }
         }
     }
+
     .download {
         margin-top: 32px;
         padding-bottom: 32px;
         border-bottom: #474747 solid 1px;
+
         .left-download {
             p {
                 font-size: 14px;
                 font-weight: 600;
                 color: white;
             }
+
             .stores {
                 display: flex;
                 gap: 10px;
                 margin-top: 10px;
+
                 img {
                     width: 130px;
                     height: 42px;
@@ -169,11 +191,76 @@ footer {
     }
 
     .foot-bot {
-        color:gray;
+        color: gray;
         margin-top: 32px;
         margin-bottom: 32px;
         display: flex;
         flex-direction: column;
         gap: 15px;
     }
+}
+
+.marat {
+    height: 500px;
+    width: 75%;
+    // background-color: red;
+    margin: 0 auto;
+
+    .p1 {
+        font-size: 30px;
+    }
+
+    .blocks_1 {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        // background-color: yellow;
+        margin: 0 auto;
+
+        .block {
+            display: flex;
+            flex-direction: column;
+
+            .top_img {
+                margin-bottom: 10px;
+            }
+        }
+    }
+
+    .blocks_2 {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        // background-color: yellow;
+        margin: 0 auto;
+
+        .block {
+            display: flex;
+            flex-direction: column;
+
+            .top {
+                display: flex;
+                align-items: center;
+
+                .top_img {
+                    margin-bottom: 10px;
+                }
+            }
+
+            .bot {
+                display: flex;
+                align-items: center;
+
+                .top_img {
+                    margin-bottom: 10px;
+                }
+            }
+        }
+    }
+}
+
+main {
+    max-width: 1920px;
+    margin: 0 auto;
+
 }
