--- a/scss/style.scss
+++ b/scss/style.scss
@@ -201,7 +201,7 @@ footer {
 }
 
 .marat {
-    width: 75%;
+    width: 100%;
     // background-color: red;
     margin: 0 auto;
 
@@ -261,5 +261,38 @@ footer {
 main {
     max-width: 1920px;
     margin: 0 auto;
+}
 
+
+.section-swiper {
+    width: 100%;
+    padding: 30px 0px;
+    height: 500px;
+    background-color: #F5F5F6;
+    .swip-custom {
+        width: 80%;
+        margin: 0 auto;
+        height: 100%;
+        .swiper {
+            height: 100% !important;
+            border-radius: 14px;
+            .swiper-slide {
+                height: 100% !important;
+            }
+
+            .swiper-button-next, .swiper-button-prev {
+                width: 50px;
+                background-color: white !important;
+                opacity: 1;
+                border-radius: 100%;
+                cursor: pointer;
+                &::after {
+                    font-size: 24px;
+                    color: red;
+                    font-weight: 900;
+                }
+            }
+
+        }
+    }
 }
