--- a/scss/style.scss
+++ b/scss/style.scss
@@ -323,3 +323,270 @@ main {
         }
     }
 }
+
+
+
+
+.long_blocks {
+    height: 200px;
+    width: 900px;
+    // background-color: rgb(0, 106, 255);
+    border-radius: 10px;
+    margin: 50px auto;
+    display: flex;
+    -webkit-box-shadow: 0px 0px 39px 0px rgba(9, 9, 9, 0.2);
+    -moz-box-shadow: 0px 0px 39px 0px rgba(9, 9, 9, 0.2);
+    box-shadow: 0px 0px 39px 0px rgba(9, 9, 9, 0.2);
+
+    .left {
+        height: 100%;
+        width: 30%;
+        // background-color: orange;
+
+        .btn_ch {
+            height: 12%;
+            padding-top: 3px;
+            width: 50%;
+            border-radius: 3px;
+            margin: 8px 28px;
+            background-color: black;
+            text-align: center;
+            font-size: 14px;
+            color: white;
+        }
+
+        .back_img {
+            height: 78%;
+            width: 80%;
+            margin: 0 auto;
+            background-color: #E31235;
+            background-position: center;
+            background-size: 100%;
+            background-repeat: no-repeat;
+            margin-left: 30px;
+        
+        }
+
+
+
+    }
+
+    .centre {
+        height: 100%;
+        width: 40%;
+        // background-color: rgb(0, 55, 255);
+        padding-top: 10px;
+        padding-left: 10px;
+        font-weight: 600;
+        font-size: 15px;
+        // background-color: orange;/
+
+        & h5 {
+            font-weight: 900;
+
+        }
+
+        .otziv {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            margin-top: 10px;
+
+            .star {
+                height: 15px;
+                width: 15px;
+                // background-color: darkblue;
+                background-image: url('../public/star\ \(2\).svg');
+                background-position: center;
+                background-size: 100%;
+                background-repeat: no-repeat;
+                // margin-left: 10px;
+            }
+
+            .ball {
+                color: #E31235;
+                font-weight: 500;
+            }
+
+            .kol_otziv {
+                color: #8e8e93;
+                margin-left: 15px;
+            }
+        }
+
+        .diogonal {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            font-size: 14px;
+            color: #8e8e93;
+            margin-top: 10px;
+
+            .diog_info {
+                color: black;
+                font-weight: 500;
+                margin-left: 5px;
+                font-size: 14px;
+
+            }
+
+        }
+
+
+        .processor {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            font-size: 14px;
+            color: #8e8e93;
+            margin-top: 10px;
+
+            .proces_info {
+                color: black;
+                font-weight: 500;
+                margin-left: 5px;
+                font-size: 14px;
+
+            }
+
+        }
+
+        .operativka {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            font-size: 14px;
+            color: #8e8e93;
+            margin-top: 10px;
+
+            .oper_info {
+                color: black;
+                font-weight: 500;
+                margin-left: 5px;
+                font-size: 14px;
+
+            }
+
+        }
+
+        .vkarta {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            font-size: 14px;
+            color: #8e8e93;
+            margin-top: 10px;
+
+            .vkarta_info {
+                color: black;
+                font-weight: 500;
+                margin-left: 5px;
+                font-size: 14px;
+
+            }
+
+        }
+
+        .obyom {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            font-size: 14px;
+            color: #8e8e93;
+            margin-top: 10px;
+
+            .obyom_info {
+                color: black;
+                font-weight: 500;
+                margin-left: 5px;
+                font-size: 14px;
+
+            }
+
+        }
+
+    }
+
+    .right {
+        height: 100%;
+        width: 30%;
+        // background-color: rgb(136, 255, 0); 
+        padding-left: 20px;
+
+        .price {
+            display: flex;
+            align-items: center;
+            font-size: 19px;
+            font-weight: 600;
+            // margin-left: ;
+            // margin-right: 10px;
+            padding-top: 20px;
+
+            .price_sale {
+                font-weight: 500;
+                font-size: 18px;
+                text-decoration: line-through;
+                color: #8e8e93;
+                margin-left: 15px !important;
+                // color: #E31235;b
+
+            }
+
+        }
+
+
+        .bonuss {
+            display: flex;
+            align-items: center;
+            margin: 10px 0;
+            transition: 0.5s;
+
+            & a {
+                color: var(--main-color);
+                margin-left: 10px;
+                text-decoration: none;
+
+            }
+
+            & p:nth-child(3) {
+                color: #8e8e93;
+                margin-left: 10px;
+            }
+
+            &:hover {
+                color: #ff002b;
+                font-weight: 700;
+            }
+        }
+
+
+        .clicks {
+            display: flex;
+            align-items: center;
+
+            button {
+                height: 35px;
+                width: 150px;
+                background-color: var(--main-color);
+                border-radius: 5px;
+                color: #F5F5F6;
+                border: none;
+                transition: 0.5s;
+
+
+                &:hover {
+                    background-color: #ff002b;
+                    color: black;
+                }
+            }
+
+            img {
+                margin-left: 10px;
+            }
+
+        }
+
+    }
+
+
+}
