--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,14 @@ header {
                 text-decoration: none;
             }
         }
+        // poisk
+        .spisok {
+            transition: all ease 500ms;
+            .hide{
+                display: none;
+            }
+        }
+        // 
     }
 }
 
