last changes search working now

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -598,3 +598,47 @@ main {
 
 
 }
+
+
+header {
+    .spisok {
+        display: none;
+        flex-direction: column;
+        gap: 4px;
+        width: 37%;
+        min-height: 100px;
+        height: fit-content;
+        background-color: white;
+        border-radius: 4px;
+        position: absolute;
+        z-index: 1000;
+        inset: 110px 0px 0px 46.5%;
+        translate: -50% 0%;
+        box-shadow: 0px 0px 5px grey;
+        padding: 5px 0px;
+        max-height: 400px;
+        overflow-y: scroll;
+        transition: .5s ease;
+        a {
+            text-decoration: none;
+            color: #000;
+        }
+
+        .item {
+            width: 100%;
+            padding: 10px 20px;
+            h4 {
+                font-size: 18px;
+                opacity: .7;
+                text-transform: capitalize;
+            }
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.2);
+            }
+
+            // b {
+            //     color: red !important;
+            // }
+        }
+    }
+}
